syntax = "proto3";

option java_multiple_files = false;

option java_package = "io.intellij.kotlin.grpc.api";

option java_outer_classname = "EchoProto";

message HelloRequest{
  string name = 1;
}

message HelloResponse{
  string welcome = 1;
}

service HelloService{
  rpc greeting(HelloRequest) returns (HelloResponse);
}
